--- a/src/components/StorySettingsView.module.scss
+++ b/src/components/StorySettingsView.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use '../styles/variables' as *;
 @use '../styles/mixins' as *;
 
@@ -104,7 +105,7 @@
     border-radius: 4px;
     
     &:hover {
-      background: darken($border-color, 10%);
+      background: color.adjust($border-color, $lightness: -10%);
     }
   }
 }
