--- a/src/components/story/StorySettingsView.module.scss
+++ b/src/components/story/StorySettingsView.module.scss
@@ -1,6 +1,6 @@
 @use 'sass:color';
-@use '../styles/variables' as *;
-@use '../styles/mixins' as *;
+@use '../../styles/variables' as *;
+@use '../../styles/mixins' as *;
 
 .overlay {
   position: fixed;
@@ -89,23 +89,23 @@
   flex: 1;
   overflow-y: auto;
   padding: $spacing-lg;
-  
+
   // Custom scrollbar styling
   &::-webkit-scrollbar {
     width: 8px;
   }
-  
+
   &::-webkit-scrollbar-track {
     background: $bg-darker;
     border-radius: 4px;
   }
-  
+
   &::-webkit-scrollbar-thumb {
     background: $border-color;
     border-radius: 4px;
-    
+
     &:hover {
-      background: color.adjust($border-color, $lightness: -10%);
+      background: $border-color-hover;
     }
   }
 }
@@ -236,4 +236,3 @@
     background: $primary-color-hover;
   }
 }
-
