--- a/src/components/ServerStatus.module.scss
+++ b/src/components/ServerStatus.module.scss
@@ -9,15 +9,15 @@
 .retryBtn {
   @include button-reset;
   padding: $spacing-xs $spacing-sm;
-  background: rgba($warning-color, 0.1);
+  background: $warning-color-light;
   color: $warning-color;
-  border: 1px solid rgba($warning-color, 0.3);
+  border: 1px solid $warning-color-border;
   border-radius: $border-radius;
   font-size: $font-size-sm;
   transition: all $transition-fast;
 
   &:hover {
-    background: rgba($warning-color, 0.2);
+    background: $warning-color-hover;
   }
 }
 
