--- a/src/components/chat/ChatInterface.module.scss
+++ b/src/components/chat/ChatInterface.module.scss
@@ -1,5 +1,5 @@
-@use '../styles/variables' as *;
-@use '../styles/mixins' as *;
+@use '@/styles/variables' as *;
+@use '@/styles/mixins' as *;
 
 .chatInterface {
   @include flex-column;
