--- a/src/components/story/StoryActions.module.scss
+++ b/src/components/story/StoryActions.module.scss
@@ -1,5 +1,5 @@
-@use '../styles/variables' as *;
-@use '../styles/mixins' as *;
+@use '@/styles/variables' as *;
+@use '@/styles/mixins' as *;
 
 .storyActions {
   padding: $spacing-md;
@@ -128,4 +128,3 @@
     cursor: not-allowed;
   }
 }
-
