--- a/src/components/story/SummaryPrompt.module.scss
+++ b/src/components/story/SummaryPrompt.module.scss
@@ -1,5 +1,5 @@
-@use '../styles/variables' as *;
-@use '../styles/mixins' as *;
+@use '../../styles/variables' as *;
+@use '@/styles/mixins' as *;
 
 .overlay {
   position: fixed;
@@ -226,4 +226,3 @@
     cursor: not-allowed;
   }
 }
-
