--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -3,7 +3,7 @@
 
 .app {
   margin: 0 auto;
-  padding: $spacing-lg;
+  padding: 0;
   height: 100vh;
   box-sizing: border-box;
   display: flex;
@@ -11,6 +11,16 @@
   background: $bg-dark;
   color: $text-primary;
   font-family: $font-family;
+  overflow: hidden;
+}
+
+.appContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: $spacing-lg;
+  padding-top: calc($spacing-lg + 32px);
+  overflow: hidden;
 }
 
 .header {
